--- a/test_render_database.ipynb
+++ b/test_render_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a2813f24",
    "metadata": {},
    "outputs": [
@@ -67,10 +67,98 @@
     ")\n",
     "\n",
     "cur = conn.cursor()\n",
-    "cur.execute(\"SELECT * FROM patients LIMIT 5;\")\n",
+    "cur.execute(\"\"\"\n",
+    "    SELECT table_name \n",
+    "    FROM information_schema.tables\n",
+    "    WHERE table_schema = 'public'\n",
+    "    ORDER BY table_name;\n",
+    "\"\"\")\n",
+    "tables = cur.fetchall()\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4064a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()\n",
+    "cur.execute(\"SELECT * FROM anime LIMIT 5;\")\n",
     "rows = cur.fetchall()\n",
-    "\n",
     "rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4781db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"\"\"\n",
+    "    SELECT anime_id, title, episodes, overall_score\n",
+    "    FROM anime\n",
+    "    ORDER BY popularity_rank\n",
+    "    LIMIT 5;\n",
+    "\"\"\")\n",
+    "rows = cur.fetchall()\n",
+    "rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28590508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()\n",
+    "cur.execute(\"\"\"\n",
+    "    SELECT \n",
+    "        a.anime_id,\n",
+    "        a.title,\n",
+    "        at.type_name AS type,\n",
+    "        ast.status_desc AS status,\n",
+    "        s.studio_name,\n",
+    "        a.overall_score,\n",
+    "        a.popularity_rank\n",
+    "    FROM anime a\n",
+    "    LEFT JOIN anime_types at ON at.type_id = a.type_id\n",
+    "    LEFT JOIN anime_statuses ast ON ast.status_id = a.status_id\n",
+    "    LEFT JOIN studios s ON s.studio_id = a.studio_id\n",
+    "    ORDER BY a.popularity_rank\n",
+    "    LIMIT 10;\n",
+    "\"\"\")\n",
+    "rows = cur.fetchall()\n",
+    "rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db53ff60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()\n",
+    "cur.execute(\"\"\"\n",
+    "    SELECT \n",
+    "        r.user_id,\n",
+    "        u.user_name,\n",
+    "        a.title,\n",
+    "        r.user_score,\n",
+    "        r.rating_date,\n",
+    "        ws.status_desc AS watch_status\n",
+    "    FROM user_anime_ratings r\n",
+    "    JOIN users u ON u.user_id = r.user_id\n",
+    "    JOIN anime a ON a.anime_id = r.anime_id\n",
+    "    JOIN watch_statuses ws ON ws.watch_status_id = r.watch_status_id\n",
+    "    LIMIT 10;\n",
+    "\"\"\")\n",
+    "rows = cur.fetchall()\n",
+    "rows\n"
    ]
   }
  ],
