--- a/test_render_database.ipynb
+++ b/test_render_database.ipynb
@@ -2,48 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2813f24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('FB2ABB23-C9D0-4D09-8464-49BF0B982F0F',\n",
-       "  2,\n",
-       "  datetime.datetime(1947, 12, 28, 2, 45, 40, 547000),\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  18.08),\n",
-       " ('64182B95-EB72-4E2B-BE77-8050B71498CE',\n",
-       "  2,\n",
-       "  datetime.datetime(1952, 1, 18, 19, 51, 12, 917000),\n",
-       "  4,\n",
-       "  6,\n",
-       "  4,\n",
-       "  13.03),\n",
-       " ('DB22A4D9-7E4D-485C-916A-9CD1386507FB',\n",
-       "  1,\n",
-       "  datetime.datetime(1970, 7, 25, 13, 4, 20, 717000),\n",
-       "  2,\n",
-       "  3,\n",
-       "  4,\n",
-       "  6.67),\n",
-       " ('6E70D84D-C75F-477C-BC37-9177C3698C66',\n",
-       "  2,\n",
-       "  datetime.datetime(1979, 1, 4, 5, 45, 29, 580000),\n",
-       "  1,\n",
-       "  3,\n",
-       "  4,\n",
-       "  16.09),\n",
-       " ('C8556CC0-32FC-4CA5-A8CD-9CCF38816167',\n",
-       "  1,\n",
-       "  datetime.datetime(1921, 4, 11, 11, 39, 49, 197000),\n",
-       "  1,\n",
-       "  3,\n",
-       "  4,\n",
-       "  18.2)]"
+       "[('admission_lab_results',),\n",
+       " ('admission_primary_diagnoses',),\n",
+       " ('admissions',),\n",
+       " ('age_groups',),\n",
+       " ('anime',),\n",
+       " ('anime_genres',),\n",
+       " ('anime_statuses',),\n",
+       " ('anime_types',),\n",
+       " ('countries',),\n",
+       " ('diagnosis_codes',),\n",
+       " ('genders',),\n",
+       " ('genres',),\n",
+       " ('lab_tests',),\n",
+       " ('lab_units',),\n",
+       " ('languages',),\n",
+       " ('marital_statuses',),\n",
+       " ('patients',),\n",
+       " ('races',),\n",
+       " ('rating_categories',),\n",
+       " ('sources',),\n",
+       " ('stage_admissions',),\n",
+       " ('stage_anime',),\n",
+       " ('stage_diagnoses',),\n",
+       " ('stage_genres',),\n",
+       " ('stage_labs',),\n",
+       " ('stage_patients',),\n",
+       " ('stage_ratings',),\n",
+       " ('stage_users',),\n",
+       " ('studios',),\n",
+       " ('user_anime_ratings',),\n",
+       " ('users',),\n",
+       " ('watch_statuses',)]"
       ]
      },
      "execution_count": 1,
