--- a/test_render_database.ipynb
+++ b/test_render_database.ipynb
@@ -2,48 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a2813f24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('admission_lab_results',),\n",
-       " ('admission_primary_diagnoses',),\n",
-       " ('admissions',),\n",
-       " ('age_groups',),\n",
-       " ('anime',),\n",
-       " ('anime_genres',),\n",
-       " ('anime_statuses',),\n",
-       " ('anime_types',),\n",
-       " ('countries',),\n",
-       " ('diagnosis_codes',),\n",
-       " ('genders',),\n",
-       " ('genres',),\n",
-       " ('lab_tests',),\n",
-       " ('lab_units',),\n",
-       " ('languages',),\n",
-       " ('marital_statuses',),\n",
-       " ('patients',),\n",
-       " ('races',),\n",
-       " ('rating_categories',),\n",
-       " ('sources',),\n",
-       " ('stage_admissions',),\n",
-       " ('stage_anime',),\n",
-       " ('stage_diagnoses',),\n",
-       " ('stage_genres',),\n",
-       " ('stage_labs',),\n",
-       " ('stage_patients',),\n",
-       " ('stage_ratings',),\n",
-       " ('stage_users',),\n",
-       " ('studios',),\n",
-       " ('user_anime_ratings',),\n",
-       " ('users',),\n",
-       " ('watch_statuses',)]"
+       "[(3924,\n",
+       "  'active',\n",
+       "  None,\n",
+       "  None,\n",
+       "  \"\\n    SELECT pid,\\n       state,\\n       wait_event_type,\\n       wait_event,\\n       query\\nFROM pg_stat_activity\\nWHERE datname = 'patientproj2_0v1';\\n\")]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,22 +37,43 @@
     ")\n",
     "\n",
     "cur = conn.cursor()\n",
+    "# cur.execute(\"\"\"\n",
+    "#     SELECT table_name \n",
+    "#     FROM information_schema.tables\n",
+    "#     WHERE table_schema = 'public'\n",
+    "#     ORDER BY table_name;\n",
+    "# \"\"\")\n",
     "cur.execute(\"\"\"\n",
-    "    SELECT table_name \n",
-    "    FROM information_schema.tables\n",
-    "    WHERE table_schema = 'public'\n",
-    "    ORDER BY table_name;\n",
+    "    SELECT pid,\n",
+    "       state,\n",
+    "       wait_event_type,\n",
+    "       wait_event,\n",
+    "       query\n",
+    "FROM pg_stat_activity\n",
+    "WHERE datname = 'patientproj2_0v1';\n",
     "\"\"\")\n",
+    "\n",
     "tables = cur.fetchall()\n",
     "tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b4064a9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur = conn.cursor()\n",
     "cur.execute(\"SELECT * FROM anime LIMIT 5;\")\n",
@@ -89,10 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9b4781db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"\n",
     "    SELECT anime_id, title, episodes, overall_score\n",
@@ -106,10 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "28590508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"\n",
@@ -134,10 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "db53ff60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur = conn.cursor()\n",
     "cur.execute(\"\"\"\n",
@@ -157,6 +184,14 @@
     "rows = cur.fetchall()\n",
     "rows\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c607ca91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
