--- a/test_render_database.ipynb
+++ b/test_render_database.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "a2813f24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3924,\n",
+       "[(559,\n",
        "  'active',\n",
        "  None,\n",
        "  None,\n",
        "  \"\\n    SELECT pid,\\n       state,\\n       wait_event_type,\\n       wait_event,\\n       query\\nFROM pg_stat_activity\\nWHERE datname = 'patientproj2_0v1';\\n\")]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,17 +59,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "b4064a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[('A001',\n",
+       "  'Fullmetal Alchemist: Brotherhood',\n",
+       "  2,\n",
+       "  1,\n",
+       "  64,\n",
+       "  datetime.datetime(2009, 4, 5, 0, 0),\n",
+       "  datetime.datetime(2010, 7, 4, 0, 0),\n",
+       "  4,\n",
+       "  11,\n",
+       "  1,\n",
+       "  9.15,\n",
+       "  1),\n",
+       " ('A002',\n",
+       "  'Attack on Titan',\n",
+       "  2,\n",
+       "  1,\n",
+       "  75,\n",
+       "  datetime.datetime(2013, 4, 7, 0, 0),\n",
+       "  datetime.datetime(2021, 3, 29, 0, 0),\n",
+       "  4,\n",
+       "  37,\n",
+       "  1,\n",
+       "  9.08,\n",
+       "  2),\n",
+       " ('A003',\n",
+       "  'One Piece',\n",
+       "  2,\n",
+       "  2,\n",
+       "  1100,\n",
+       "  datetime.datetime(1999, 10, 20, 0, 0),\n",
+       "  None,\n",
+       "  7,\n",
+       "  1,\n",
+       "  2,\n",
+       "  8.8,\n",
+       "  3),\n",
+       " ('A004',\n",
+       "  'Demon Slayer: Kimetsu no Yaiba',\n",
+       "  2,\n",
+       "  1,\n",
+       "  26,\n",
+       "  datetime.datetime(2019, 4, 6, 0, 0),\n",
+       "  datetime.datetime(2019, 9, 28, 0, 0),\n",
+       "  4,\n",
+       "  14,\n",
+       "  1,\n",
+       "  8.85,\n",
+       "  4),\n",
+       " ('A005',\n",
+       "  'Jujutsu Kaisen',\n",
+       "  2,\n",
+       "  2,\n",
+       "  24,\n",
+       "  datetime.datetime(2020, 10, 3, 0, 0),\n",
+       "  None,\n",
+       "  4,\n",
+       "  37,\n",
+       "  1,\n",
+       "  8.75,\n",
+       "  5)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,17 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "9b4781db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[('A001', 'Fullmetal Alchemist: Brotherhood', 64, 9.15),\n",
+       " ('A002', 'Attack on Titan', 75, 9.08),\n",
+       " ('A003', 'One Piece', 1100, 8.8),\n",
+       " ('A004', 'Demon Slayer: Kimetsu no Yaiba', 26, 8.85),\n",
+       " ('A005', 'Jujutsu Kaisen', 24, 8.75)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,17 +213,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "db53ff60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Demon Slayer: Kimetsu no Yaiba',\n",
+       "  7.0,\n",
+       "  datetime.datetime(2024, 4, 29, 0, 0),\n",
+       "  'Completed'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Violet Evergarden',\n",
+       "  8.0,\n",
+       "  datetime.datetime(2024, 6, 25, 0, 0),\n",
+       "  'Completed'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Tokyo Ghoul',\n",
+       "  8.0,\n",
+       "  datetime.datetime(2024, 5, 22, 0, 0),\n",
+       "  'On-Hold'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Your Lie in April',\n",
+       "  6.0,\n",
+       "  datetime.datetime(2024, 1, 16, 0, 0),\n",
+       "  'On-Hold'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Gintama',\n",
+       "  7.0,\n",
+       "  datetime.datetime(2024, 12, 23, 0, 0),\n",
+       "  'Completed'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Re:Zero − Starting Life in Another World',\n",
+       "  10.0,\n",
+       "  datetime.datetime(2024, 5, 22, 0, 0),\n",
+       "  'On-Hold'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Konosuba 2',\n",
+       "  9.0,\n",
+       "  datetime.datetime(2024, 4, 22, 0, 0),\n",
+       "  'Dropped'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Overlord III',\n",
+       "  7.0,\n",
+       "  datetime.datetime(2024, 11, 28, 0, 0),\n",
+       "  'Dropped'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Chihayafuru',\n",
+       "  6.0,\n",
+       "  datetime.datetime(2024, 7, 13, 0, 0),\n",
+       "  'Completed'),\n",
+       " ('U001',\n",
+       "  'anime_fan_001',\n",
+       "  'Fire Force Season 2',\n",
+       "  8.0,\n",
+       "  datetime.datetime(2024, 1, 23, 0, 0),\n",
+       "  'Dropped')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
